hard-gists/2620735/run.log
=== Docker Run Log for 2620735 ===
Started at: Mi 29. Okt 13:09:52 CET 2025

[2025-10-29 13:09:53] START: Running container for 2620735
[2025-10-29 13:09:53] SUCCESS: Container fda2a27016e91a76acfa243fa796228e8c85a97adc23412dfab67abfb682a816 started for 2620735
=== Container logs for 2620735 ===
  File "/snippet.py", line 79
    print "missing key: %s != %s" % (test.keys(), ref.keys())
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2620735 ===
[2025-10-29 13:09:55] INFO: Container fda2a27016e91a76acfa243fa796228e8c85a97adc23412dfab67abfb682a816 has stopped
